Aula 26 - SharedPreferences: Criado class para uso SharedPreferences; Colocado lógica para armazenar se tá check ou não; criado pacote constants para na classe colocar strings static para usar como chave e valores do SharedPreferences.

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -10,7 +10,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    tools:context="com.example.orafa.androidfestafimdeanoudemy.DetailsActivity">
+    tools:context="com.example.orafa.androidfestafimdeanoudemy.views.DetailsActivity">
 
 
     <TextView
