Alinhamento, tamanhos, etc dos views no Main usando RelativeLayout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context="com.example.orafa.androidfestafimdeanoudemy.views.MainActivity">
 
     <TextView
+        android:id="@+id/text_label_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hoje" />
+        android:text="@string/hoje"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/text_today"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hoje" />
+        android:layout_marginLeft="10dp"
+        android:layout_toRightOf="@id/text_label_today"
+        android:text="@string/hoje"
+        android:textSize="25sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/text_today"
+        android:background="@color/colorPrimary" />
 
     <TextView
+        android:id="@+id/text_label_days_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/dias_restantes_para_o_fim_do_ano" />
+        android:layout_below="@id/text_label_today"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
+        android:text="@string/dias_restantes_para_o_fim_do_ano"
+
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/text_days_left"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/dias_restantes_para_o_fim_do_ano" />
+        android:layout_below="@id/text_label_days_left"
+        android:layout_centerHorizontal="true"
+        android:padding="20sp"
+        android:text="325 Dias"
+        android:textSize="40sp" />
 
     <Button
         android:id="@+id/button_confirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="sim/não/não confirmado" />
+        android:layout_alignParentBottom="true"
+        android:padding="20dp"
+        android:text="sim/não/não confirmado"
+        android:textSize="20sp" />
 
 
-</LinearLayout>
+</RelativeLayout>
