--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#00BCD4</color>
+    <color name="colorPrimaryLight">#B2EBF2</color>
+    <color name="colorPrimaryDark">#0097A7</color>
+    <color name="colorAccent">#8bc34a</color>
+    <color name="colorPrimaryText">#505050</color>
+    <color name="colorDivider">#BDBDBD</color>
+    <color name="colorPrimaryGreen">#77bfa3</color>
+    <color name="colorTextWhite">#fff</color>
 </resources>
